fix: resolve tests errors and fix endpoints
